--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
+  <div class="header">
+    <img src="BACKPOCKET.png" alt="Company Logo" class="logo">
+    <span>DEMO</span>
+  </div>
+  <div id="map"></div>
   <!--Add buttons to initiate auth sequence and sign out-->
   <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
   <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
@@ -112,7 +121,7 @@
     function makeApiCall(cellrow, selectedContact) {
       var params = {
         spreadsheetId: '12jxODA7mVsxdWN2D1QrFNewP_67A5CGt_6L1Ev75diU',
-        range: "MapView!G" + (cellrow) + ":G" + (cellrow),
+        range: "MapView!H" + (cellrow) + ":H" + (cellrow),
         valueInputOption: 'RAW',
       };
     
