--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="header">
-    <img src="your_logo_url_here" alt="Company Logo" class="logo">
+    <img src="BACKPOCKET.png" alt="Company Logo" class="logo">
     <span>DEMO</span>
     <div>
       <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
