--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     function makeApiCall(cellrow, selectedContact) {
       var params = {
         spreadsheetId: '12jxODA7mVsxdWN2D1QrFNewP_67A5CGt_6L1Ev75diU',
-        range: "MapView!F" + (cellrow) + ":F" + (cellrow),
+        range: "DEMO!G" + (cellrow) + ":G" + (cellrow),
         valueInputOption: 'RAW',
       };
 
