--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     }
 
     function getMarkerIcon(contact) {
-      return contact !== '' ?
+      return (contact !== undefined && contact !== null && contact !== '') ?
         'http://maps.google.com/mapfiles/ms/icons/red-dot.png' :
         'http://maps.google.com/mapfiles/ms/icons/blue-dot.png';
     }
