--- a/index.html
+++ b/index.html
@@ -18,16 +18,33 @@
   <div id="map"></div>
 
   <div class="features-section">
-    <h2>Features</h2>
-    <ul>
-      <li>Automated Email: Send automated emails to leads with customizable templates.</li>
-      <li>Customizable InfoWindow: Personalize the information displayed on the map for each lead.</li>
-      <li>Hail Data (Beta): Access hailstorm data to identify potential leads in affected areas.</li>
-      <li>Route Optimization: Optimize driving routes between multiple leads to save time and fuel.</li>
-      <li>Automated Follow-ups: Schedule automated email or SMS follow-ups with leads using third-party APIs.</li>
-      <!-- Add other bullet points here -->
-    </ul>
+    <h2 class="features-title">Key Features</h2>
+    <div class="row">
+      <!-- Add more feature cards as needed -->
+      <div class="col-md-4 feature-card">
+        <div class="card">
+          <img src="route-optimization-icon.png" alt="Route Optimization" class="feature-icon">
+          <h3>Route Optimization</h3>
+          <p>Efficiently plan and manage the routes for site visits and save time and fuel costs.</p>
+        </div>
+      </div>
+      <div class="col-md-4 feature-card">
+        <div class="card">
+          <img src="weather-data-icon.png" alt="Weather Data Integration" class="feature-icon">
+          <h3>Weather Data Integration</h3>
+          <p>Access real-time weather data to make informed decisions and ensure the safety of your workforce.</p>
+        </div>
+      </div>
+      <div class="col-md-4 feature-card">
+        <div class="card">
+          <img src="automated-follow-ups-icon.png" alt="Automated Follow-ups" class="feature-icon">
+          <h3>Automated Follow-ups</h3>
+          <p>Automate follow-up processes to improve communication with leads and increase conversion rates.</p>
+        </div>
+      </div>
+    </div>
   </div>
+  
   <pre id="content" style="white-space: pre-wrap;"></pre>
 
   <script type="text/javascript">
