--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <h2 class="features-title">Key Features</h2>
     <div class="row">
       <!-- Add more feature cards as needed -->
+      </div>
       <div class="col-md-4 feature-card">
         <div class="card">
-          <img src="route-optimization-icon.png" alt="Route Optimization" class="feature-icon">
-          <h3>Route Optimization</h3>
-          <p>Efficiently plan and manage the routes for site visits and save time and fuel costs.</p>
+          <img src="weather-data-icon.png" alt="Weather Data Integration" class="feature-icon">
+          <h3>Weather Data Integration</h3>
+          <p>Access real-time weather data to make informed decisions and ensure the safety of your workforce.</p>
         </div>
       </div>
       <div class="col-md-4 feature-card">
@@ -42,6 +43,12 @@
           <p>Automate follow-up processes to improve communication with leads and increase conversion rates.</p>
         </div>
       </div>
+      <div class="col-md-4 feature-card">
+        <div class="card">
+          <img src="route-optimization-icon.png" alt="Route Optimization" class="feature-icon">
+          <h3>Route Optimization</h3>
+          <p>Efficiently plan and manage the routes for site visits and save time and fuel costs.</p>
+        </div>
     </div>
   </div>
   
