--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
     <h2 class="features-title">Key Features</h2>
     <div class="row">
       <!-- Add more feature cards as needed -->
-      <div class="col-md-4 feature-card">
-        <div class="card">
-          <img src="interface.png" alt="Interface" class="feature-icon">
-          <h3>Customizable Interface</h3>
-          <p>Cater the web application and spreadsheet to your needs including displaying the most important data to maximize efficiency</p>
+      <div class="features-container">
+        <div class="col-md-4 feature-card">
+          <div class="card">
+            <img src="interface.png" alt="Interface" class="feature-icon">
+            <h3>Customizable Interface</h3>
+            <p>Cater the web application and spreadsheet to your needs including displaying the most important data to maximize efficiency</p>
+          </div>
+        </div>
+        <div class="col-md-4 feature-card">
+          <div class="card">
+            <img src="weather-data-icon.png" alt="Weather Data Integration" class="feature-icon">
+            <h3>Weather Data Integration (BETA)</h3>
+            <p>Access recent hail storm data to help generate potential leads</p>
+          </div>
+        </div>
+        <div class="col-md-4 feature-card">
+          <div class="card">
+            <img src="automated-follow-ups-icon.png" alt="Automated Follow-ups" class="feature-icon">
+            <h3>Automated Follow-ups</h3>
+            <p>Automate follow-up processes to improve communication with leads and increase conversion rates.</p>
+          </div>
         </div>
       </div>
-      </div>
-      <div class="col-md-4 feature-card">
-        <div class="card">
-          <img src="weather-data-icon.png" alt="Weather Data Integration" class="feature-icon">
-          <h3>Weather Data Integration (BETA)</h3>
-          <p>Access recent hail storm data to help generate potential leads</p>
-        </div>
-      </div>
-      <div class="col-md-4 feature-card">
-        <div class="card">
-          <img src="automated-follow-ups-icon.png" alt="Automated Follow-ups" class="feature-icon">
-          <h3>Automated Follow-ups</h3>
-          <p>Automate follow-up processes to improve communication with leads and increase conversion rates.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+      
   
   <pre id="content" style="white-space: pre-wrap;"></pre>
 
