--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
   <script>
     // Initialize the map
     var map;
+    var geocoder = new google.maps.Geocoder();
     function initMap() {
       map = new google.maps.Map(document.getElementById("map"), {
         center: {lat: 38.045377, lng: -84.495359},
