--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     }
 
     function getMarkerIcon(contact) {
-      return (contact !== undefined && contact !== null && contact !== '') ?
+      return (contact !== undefined && contact !== null && contact !== ''&& contact !== 'none') ?
         'http://maps.google.com/mapfiles/ms/icons/red-dot.png' :
         'http://maps.google.com/mapfiles/ms/icons/blue-dot.png';
     }
