--- a/index.html
+++ b/index.html
@@ -314,6 +314,110 @@
         console.error('error: ' + reason.result.error.message);
       });
     }
+// Add a click event listener on the map to add a new pin
+google.maps.event.addListener(map, 'click', function(event) {
+  var latLng = event.latLng;
+  var marker = new google.maps.Marker({
+    position: latLng,
+    map: map,
+    icon: getMarkerIcon(null),
+  });
+
+  // Open an info window with a form to input the required data
+  var content = '<form id="new-pin-form">' +
+    '<label>Contact Name:</label><input type="text" id="contact-name"><br>' +
+    '<label>Phone Number:</label><input type="text" id="phone-number"><br>' +
+    '<label>Email:</label><input type="email" id="email"><br>' +
+    '<label>Contact:</label><input type="text" id="contact"><br>' +
+    '<button type="submit">Save</button>' +
+    '</form>';
+
+  var infoWindow = new google.maps.InfoWindow({
+    content: content
+  });
+
+  infoWindow.open(map, marker);
+
+  // Add a submit event listener on the form
+  google.maps.event.addDomListener(document.getElementById('new-pin-form'), 'submit', function(e) {
+    e.preventDefault();
+
+    var name = document.getElementById('contact-name').value;
+    var phone = document.getElementById('phone-number').value;
+    var email = document.getElementById('email').value;
+    var contact = document.getElementById('contact').value;
+
+    // Geocode the LatLng of the pin to get the address, city, and state
+    geocoder.geocode({'location': latLng}, function(results, status) {
+      if (status === 'OK') {
+        var address = results[0].formatted_address;
+        var city = '';
+        var state = '';
+
+        // Loop through the address components to get the city and state
+        for (var i = 0; i < results[0].address_components.length; i++) {
+          var component = results[0].address_components[i];
+          if (component.types.indexOf('locality') !== -1) {
+            city = component.long_name;
+          }
+          if (component.types.indexOf('administrative_area_level_1') !== -1) {
+            state = component.short_name;
+          }
+        }
+
+        // Save the data to the Google Sheet
+        saveDataToSheet(address, city, state, name, phone, email, contact);
+
+      } else {
+        console.error('Geocode error: ' + status);
+      }
+    });
+
+    // Close the info window after submission
+    infoWindow.close();
+  });
+});
+
+async function saveDataToSheet(address, city, state, name, phone, email, contact) {
+  // Create the resource body for appending data to the Google Sheet
+  const valueRangeBody = {
+    "range": "DEMO!A1:G",
+    "majorDimension": "ROWS",
+    "values": [
+      [address, city, state, name, phone, email, contact]
+    ]
+  };
+
+  try {
+    // Use the Google Sheets API to append the data to the next empty row
+    await gapi.client.sheets.spreadsheets.values.append({
+      spreadsheetId: '12jxODA7mVsxdWN2D1QrFNewP_67A5CGt_6L1Ev75diU',
+      range: 'DEMO!A1:G',
+      valueInputOption: 'RAW',
+      insertDataOption: 'INSERT_ROWS', // This option inserts the data in the next empty row
+      resource: valueRangeBody
+    });
+    console.log('Data saved to Google Sheet successfully');
+  } catch (error) {
+    console.error('Error saving data to Google Sheet:', error);
+  }
+}
+
+
+try {
+  await gapi.client.sheets.spreadsheets.values.append({
+    spreadsheetId: '12jxODA7mVsxdWN2D1QrFNewP_67A5CGt_6L1Ev75diU',
+    range: 'DEMO!A1:G',
+    valueInputOption: 'RAW',
+    insertDataOption: 'INSERT_ROWS',
+    resource: valueRangeBody
+  });
+  console.log('Data saved to Google Sheet successfully');
+} catch (error) {
+  console.error('Error saving data to Google Sheet:', error);
+}
+
+    
   </script>
   <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
