--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
         center: {lat: 38.045377, lng: -84.495359},
         zoom: 5
       });
+      const geocoder = new google.maps.Geocoder();
       var legend = document.createElement('div');
     legend.id = 'legend';
     legend.className = 'gmap-legend';
