--- a/index.html
+++ b/index.html
@@ -191,12 +191,13 @@
   <script>
     // Initialize the map
     var map;
+    var geocoder;
     function initMap() {
       map = new google.maps.Map(document.getElementById("map"), {
         center: {lat: 38.045377, lng: -84.495359},
         zoom: 5
       });
-      const geocoder = new google.maps.Geocoder();
+      const geocoder = new google.maps.Geocoder()
       var legend = document.createElement('div');
     legend.id = 'legend';
     legend.className = 'gmap-legend';
