--- a/index.html
+++ b/index.html
@@ -53,23 +53,36 @@
     /* exported gisLoaded */
     /* exported handleAuthClick */
     /* exported handleSignoutClick */
-  
+
+    // TODO(developer): Set to client ID and API key from the Developer Console
     const CLIENT_ID = '1013250654012-dtaid9el9h1ob4g5sc6upjip564fh40b.apps.googleusercontent.com';
     const API_KEY = 'AIzaSyALwh15cE0Jyt35HbTx7fyzdiedm3aL02s';
+
+    // Discovery doc URL for APIs used by the quickstart
     const DISCOVERY_DOC = 'https://sheets.googleapis.com/$discovery/rest?version=v4';
+
+    // Authorization scopes required by the API; multiple scopes can be
+    // included, separated by spaces.
     const SCOPES = 'https://www.googleapis.com/auth/spreadsheets';
-  
+
     let tokenClient;
     let gapiInited = false;
     let gisInited = false;
-  
+
     document.getElementById('authorize_button').style.visibility = 'hidden';
     document.getElementById('signout_button').style.visibility = 'hidden';
-  
+
+    /**
+     * Callback after api.js is loaded.
+     */
     function gapiLoaded() {
       gapi.load('client', initializeGapiClient);
     }
-  
+
+    /**
+     * Callback after the API client is loaded. Loads the
+     * discovery doc to initialize the API.
+     */
     async function initializeGapiClient() {
       await gapi.client.init({
         apiKey: API_KEY,
@@ -78,7 +91,10 @@
       gapiInited = true;
       maybeEnableButtons();
     }
-  
+
+    /**
+     * Callback after Google Identity Services are loaded.
+     */
     function gisLoaded() {
       tokenClient = google.accounts.oauth2.initTokenClient({
         client_id: CLIENT_ID,
@@ -88,13 +104,19 @@
       gisInited = true;
       maybeEnableButtons();
     }
-  
+
+    /**
+     * Enables user interaction after all libraries are loaded.
+     */
     function maybeEnableButtons() {
       if (gapiInited && gisInited) {
         document.getElementById('authorize_button').style.visibility = 'visible';
       }
     }
-  
+
+    /**
+     *  Sign in the user upon button click.
+     */
     function handleAuthClick() {
       tokenClient.callback = async (resp) => {
         if (resp.error !== undefined) {
@@ -103,14 +125,20 @@
         document.getElementById('signout_button').style.visibility = 'visible';
         document.getElementById('authorize_button').innerText = 'Refresh';
       };
-  
+
       if (gapi.client.getToken() === null) {
+        // Prompt the user to select a Google Account and ask for consent to share their data
+        // when establishing a new session.
         tokenClient.requestAccessToken({ prompt: 'consent' });
       } else {
+        // Skip display of account chooser and consent dialog for an existing session.
         tokenClient.requestAccessToken({ prompt: '' });
       }
     }
-  
+
+    /**
+     *  Sign out the user upon button click.
+     */
     function handleSignoutClick() {
       const token = gapi.client.getToken();
       if (token !== null) {
@@ -121,8 +149,37 @@
         document.getElementById('signout_button').style.visibility = 'hidden';
       }
     }
+    async function makeApiCall(cellrow, selectedContact, callback) {
+      var params = {
+        spreadsheetId: '12jxODA7mVsxdWN2D1QrFNewP_67A5CGt_6L1Ev75diU',
+        range: "DEMO!G" + (cellrow) + ":G" + (cellrow),
+        valueInputOption: 'RAW',
+      };
+
+      var valueRangeBody = {
+        "values": [
+          [
+            selectedContact
+          ]
+        ]
+      };
+
+      try {
+        const response = await gapi.client.sheets.spreadsheets.values.update(params, valueRangeBody);
+        console.log(response.result);
+        callback();
+      } catch (error) {
+        console.error('error: ' + error.result.error.message);
+      }
+    }
+
+    function getMarkerIcon(contact) {
+      return (contact !== undefined && contact !== null && contact !== ''&& contact !== 'none') ?
+        'http://maps.google.com/mapfiles/ms/icons/red-dot.png' :
+        'http://maps.google.com/mapfiles/ms/icons/blue-dot.png';
+    }
+    
   </script>
-  
   <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>     
     <title>Roof Tool Demo</title>
